--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,7 @@ License: GPL-3
 Depends: R (>= 2.10)
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
