Added the arc2sp function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,4 +20,6 @@ Suggests: testthat,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-Imports: RegionalCurve
+Imports: RegionalCurve,
+    arcgisbinding,
+    sp
