Added xs_geometry function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,6 @@ export(update_gof_stats)
 export(update_reach)
 export(update_xs_dims)
 export(update_xs_points)
+export(xs_geometry)
+importFrom(stats,approxfun)
+importFrom(stats,integrate)
