Added xs_geometry function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(update_reach)
 export(update_xs_dims)
 export(update_xs_points)
 export(xs_geometry)
+export(xs_geometry_table)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
