Corrected xs_geometry_table docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ export(xs_geometry)
 export(xs_geometry_table)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
+importFrom(stats,na.omit)
