Added xs_metrics test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(update_reach)
 export(update_xs_dims)
 export(update_xs_points)
 export(xs_geometry)
-export(xs_geometry_table)
+export(xs_metrics)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
 importFrom(stats,na.omit)
