Added xs_regional_metrics function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(update_xs_dims)
 export(update_xs_points)
 export(xs_geometry)
 export(xs_metrics)
+export(xs_regional_metrics)
+importFrom(RegionalCurve,RHG)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
 importFrom(stats,na.omit)
