--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ export(update_gof_stats)
 export(update_reach)
 export(update_xs_dims)
 export(update_xs_points)
+export(xs_dimensions)
 export(xs_geometry)
 export(xs_metrics)
 export(xs_regional_metrics)
 importFrom(RegionalCurve,RHG)
+importFrom(dplyr,bind_rows)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
 importFrom(stats,na.omit)
