Added build_gof_stats function and tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,6 @@ VignetteBuilder: knitr
 Imports: RegionalCurve,
     arcgisbinding,
     sp,
-    dplyr
+    dplyr,
+    Metrics
 RoxygenNote: 6.1.0
