Added defensive tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(xs_regional_metrics)
 importFrom(Metrics,mae)
 importFrom(Metrics,rmse)
 importFrom(RegionalCurve,RHG)
+importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
