Added xs_plot function and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,23 @@ export(update_xs_points)
 export(xs_dimensions)
 export(xs_geometry)
 export(xs_metrics)
+export(xs_plot)
 export(xs_regional_metrics)
 importFrom(Metrics,mae)
 importFrom(Metrics,rmse)
 importFrom(RegionalCurve,RHG)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,sec_axis)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
 importFrom(stats,na.omit)
