--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(arc2sp)
 export(build_gof_stats)
+export(gof_graph)
 export(sp2arc)
 export(update_gof_stats)
 export(update_reach)
@@ -18,15 +19,21 @@ importFrom(RegionalCurve,RHG)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,as_labeller)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_brewer)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,sec_axis)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,unit)
+importFrom(reshape2,melt)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
 importFrom(stats,na.omit)
