--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,17 +26,18 @@ License: GPL-3
 Depends: R (>= 2.10)
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat,
+Suggests: 
+    testthat,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
 Imports: 
     RegionalCurve,
     arcgisbinding,
-    sp,
     dplyr,
     Metrics,
     assertthat,
     ggplot2,
-    reshape2
+    reshape2,
+    ggrepel
 RoxygenNote: 6.1.0
