--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(arc2sp)
 export(build_gof_stats)
 export(gof_graph)
+export(reach_rhg_graph)
 export(sp2arc)
 export(update_gof_stats)
 export(update_reach)
@@ -24,15 +25,20 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_smooth)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_brewer)
+importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,sec_axis)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,unit)
+importFrom(ggrepel,geom_text_repel)
 importFrom(reshape2,melt)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
