Fixed ggplot2 NSE problems

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(RegionalCurve,RHG)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,as_labeller)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
