--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Description: This package contains a wide range of functions for performing
     stream channel dimensions, help choose bankfull elevation for ungaged 
     streams).
 License: GPL-3
+URL: https://bitbucket.di2e.net/projects/MVREGIS/repos/fgm
 Depends: R (>= 2.10)
 Encoding: UTF-8
 LazyData: true
