Added slope_sinuosity, xs_metrics_plot, and xs_profile_plot functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(build_gof_stats)
 export(estimate_bankfull)
 export(gof_graph)
 export(reach_rhg_graph)
+export(slope_sinuosity)
 export(sp2arc)
 export(update_gof_stats)
 export(update_reach)
@@ -13,16 +14,23 @@ export(update_xs_points)
 export(xs_dimensions)
 export(xs_geometry)
 export(xs_metrics)
+export(xs_metrics_plot)
 export(xs_plot)
+export(xs_profile_plot)
 export(xs_regional_metrics)
 importFrom(Metrics,mae)
 importFrom(Metrics,rmse)
 importFrom(RegionalCurve,RHG)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,lag)
+importFrom(dplyr,lead)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,as_labeller)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_hline)
@@ -33,7 +41,9 @@ importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_brewer)
+importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_x_log10)
+importFrom(ggplot2,scale_x_reverse)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,sec_axis)
@@ -41,7 +51,9 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,unit)
 importFrom(ggrepel,geom_text_repel)
+importFrom(raster,pointDistance)
 importFrom(reshape2,melt)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
 importFrom(stats,na.omit)
+importFrom(tidyr,gather)
