Added the stream_power function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(planform)
 export(reach_rhg_graph)
 export(slope_sinuosity)
 export(sp2arc)
+export(unit_stream_power)
 export(update_gof_stats)
 export(update_reach)
 export(update_xs_dims)
