--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,18 @@ export(bend_raduis_plot)
 export(build_gof_stats)
 export(check_data_structure)
 export(estimate_bankfull)
+export(feature_extent)
 export(gof_graph)
 export(meander_length)
 export(meander_width)
 export(planform)
+export(reach_metric_map)
+export(reach_overview_map)
 export(reach_rhg_graph)
+export(shear_stress)
 export(slope_sinuosity)
 export(sp2arc)
+export(stream_power)
 export(unit_stream_power)
 export(update_gof_stats)
 export(update_reach)
@@ -20,14 +25,20 @@ export(update_xs_dims)
 export(update_xs_points)
 export(xs_dimensions)
 export(xs_geometry)
+export(xs_map)
+export(xs_metric_plot)
 export(xs_metrics)
 export(xs_metrics_plot)
+export(xs_metrics_plot2)
+export(xs_metrics_report)
 export(xs_plot)
 export(xs_profile_plot)
 export(xs_regional_metrics)
 importFrom(Metrics,mae)
 importFrom(Metrics,rmse)
 importFrom(RegionalCurve,RHG)
+importFrom(arcgisbinding,arc.open)
+importFrom(arcgisbinding,arc.raster)
 importFrom(assertthat,assert_that)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
@@ -65,9 +76,16 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,unit)
 importFrom(ggrepel,geom_text_repel)
+importFrom(grDevices,colorRampPalette)
+importFrom(raster,crop)
+importFrom(raster,extent)
+importFrom(raster,hillShade)
 importFrom(raster,pointDistance)
+importFrom(raster,terrain)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(rlang,parse_expr)
+importFrom(scales,rescale)
 importFrom(stats,aggregate)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
@@ -75,3 +93,13 @@ importFrom(stats,loess)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(tidyr,gather)
+importFrom(tmap,tm_add_legend)
+importFrom(tmap,tm_compass)
+importFrom(tmap,tm_layout)
+importFrom(tmap,tm_lines)
+importFrom(tmap,tm_raster)
+importFrom(tmap,tm_rgb)
+importFrom(tmap,tm_scale_bar)
+importFrom(tmap,tm_shape)
+importFrom(tmap,tm_symbols)
+importFrom(tmap,tm_text)
