--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,14 +19,11 @@ export(slope_sinuosity)
 export(sp2arc)
 export(stream_power)
 export(unit_stream_power)
-export(update_gof_stats)
-export(update_reach)
-export(update_xs_dims)
-export(update_xs_points)
 export(xs_dimensions)
 export(xs_geometry)
 export(xs_map)
 export(xs_metric_plot)
+export(xs_metric_ratios)
 export(xs_metrics)
 export(xs_metrics_plot)
 export(xs_metrics_plot2)
@@ -103,3 +100,6 @@ importFrom(tmap,tm_scale_bar)
 importFrom(tmap,tm_shape)
 importFrom(tmap,tm_symbols)
 importFrom(tmap,tm_text)
+importFrom(tmaptools,bb)
+importFrom(tmaptools,get_projection)
+importFrom(tmaptools,read_osm)
