Added metric_colors function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(feature_extent)
 export(gof_graph)
 export(meander_length)
 export(meander_width)
+export(metric_colors)
 export(planform)
 export(reach_metric_map)
 export(reach_overview_map)
