--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,25 +4,36 @@ export(arc2sp)
 export(bend_radius)
 export(bend_raduis_plot)
 export(build_gof_stats)
+export(check_bankline_points)
+export(check_banklines)
+export(check_channel_feature)
+export(check_cross_section)
+export(check_cross_section_points)
 export(check_data_structure)
+export(check_features)
+export(check_flowline)
+export(check_flowline_points)
+export(check_loop_points)
+export(check_valleyline)
+export(check_valleyline_points)
+export(check_xs_dims)
 export(estimate_bankfull)
 export(feature_extent)
 export(gof_graph)
+export(map_reach_metric)
+export(map_reach_overview)
+export(map_xs)
 export(meander_length)
 export(meander_width)
 export(metric_colors)
 export(planform)
-export(reach_metric_map)
-export(reach_overview_map)
 export(reach_rhg_graph)
 export(shear_stress)
 export(slope_sinuosity)
 export(sp2arc)
 export(stream_power)
-export(unit_stream_power)
 export(xs_dimensions)
 export(xs_geometry)
-export(xs_map)
 export(xs_metric_plot)
 export(xs_metric_ratios)
 export(xs_metrics)
@@ -82,6 +93,8 @@ importFrom(raster,pointDistance)
 importFrom(raster,terrain)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(rlang,enquo)
+importFrom(rlang,eval_tidy)
 importFrom(rlang,parse_expr)
 importFrom(scales,rescale)
 importFrom(stats,aggregate)
@@ -90,6 +103,7 @@ importFrom(stats,integrate)
 importFrom(stats,loess)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
+importFrom(testthat,expect_true)
 importFrom(tidyr,gather)
 importFrom(tmap,tm_add_legend)
 importFrom(tmap,tm_compass)
