--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(check_loop_points)
 export(check_valleyline)
 export(check_valleyline_points)
 export(check_xs_dims)
+export(cross_section_dimensions)
 export(estimate_bankfull)
 export(feature_extent)
 export(gof_graph)
@@ -56,6 +57,7 @@ importFrom(dplyr,first)
 importFrom(dplyr,lag)
 importFrom(dplyr,last)
 importFrom(dplyr,lead)
+importFrom(dplyr,select)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,alpha)
