--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(check_features)
 export(check_flowline)
 export(check_flowline_points)
 export(check_loop_points)
+export(check_slope_sinuosity)
 export(check_valleyline)
 export(check_valleyline_points)
 export(check_xs_dims)
@@ -34,6 +35,7 @@ export(shear_stress)
 export(slope_sinuosity)
 export(sp2arc)
 export(stream_power)
+export(xs2pts)
 export(xs_dimensions)
 export(xs_geometry)
 export(xs_metric_plot)
@@ -93,12 +95,16 @@ importFrom(raster,crop)
 importFrom(raster,extent)
 importFrom(raster,hillShade)
 importFrom(raster,pointDistance)
+importFrom(raster,raster)
+importFrom(raster,resample)
 importFrom(raster,terrain)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rlang,parse_expr)
 importFrom(scales,rescale)
+importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,merge)
+importFrom(sp,proj4string)
 importFrom(stats,aggregate)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
