--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(dplyr,lag)
 importFrom(dplyr,last)
 importFrom(dplyr,lead)
 importFrom(dplyr,select)
+importFrom(facetscales,facet_grid_sc)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,alpha)
@@ -78,6 +79,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_smooth)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,label_wrap_gen)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_brewer)
 importFrom(ggplot2,scale_color_manual)
@@ -89,6 +91,7 @@ importFrom(ggplot2,sec_axis)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,unit)
+importFrom(ggplot2,vars)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(raster,crop)
