--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,12 @@ export(check_slope_sinuosity)
 export(check_valleyline)
 export(check_valleyline_points)
 export(check_xs_dims)
+export(compare_long_profile)
+export(compare_xs_long_profile)
 export(cross_section_dimensions)
 export(estimate_bankfull)
 export(feature_extent)
+export(forward_slash)
 export(gof_graph)
 export(map_reach_metric)
 export(map_reach_overview)
@@ -36,6 +39,7 @@ export(slope_sinuosity)
 export(sp2arc)
 export(stream_power)
 export(xs2pts)
+export(xs_compare_plot)
 export(xs_dimensions)
 export(xs_geometry)
 export(xs_metric_plot)
@@ -56,6 +60,7 @@ importFrom(assertthat,assert_that)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,lag)
 importFrom(dplyr,last)
@@ -94,6 +99,7 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
+importFrom(purrr,map)
 importFrom(raster,crop)
 importFrom(raster,extent)
 importFrom(raster,hillShade)
