--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,9 +22,11 @@ export(compare_long_profile)
 export(compare_xs_long_profile)
 export(cross_section_dimensions)
 export(estimate_bankfull)
+export(fc2sf)
 export(feature_extent)
 export(forward_slash)
 export(gof_graph)
+export(level_1_report)
 export(map_reach_metric)
 export(map_reach_overview)
 export(map_xs)
@@ -99,6 +101,7 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
+importFrom(purrr,discard)
 importFrom(purrr,map)
 importFrom(raster,crop)
 importFrom(raster,extent)
@@ -110,7 +113,11 @@ importFrom(raster,terrain)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rlang,parse_expr)
+importFrom(rmarkdown,render)
 importFrom(scales,rescale)
+importFrom(sf,st_crs)
+importFrom(sf,st_drop_geometry)
+importFrom(sf,st_read)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,merge)
 importFrom(sp,proj4string)
@@ -133,5 +140,4 @@ importFrom(tmap,tm_shape)
 importFrom(tmap,tm_symbols)
 importFrom(tmap,tm_text)
 importFrom(tmaptools,bb)
-importFrom(tmaptools,get_projection)
 importFrom(tmaptools,read_osm)
