Updated compare_xs_long_profile plot to use new spatial data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,10 +64,12 @@ importFrom(conicfit,calculateCircle)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
+importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,last)
 importFrom(dplyr,lead)
 importFrom(dplyr,select)
+importFrom(dplyr,summarize)
 importFrom(facetscales,facet_grid_sc)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
@@ -84,6 +86,7 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_smooth)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,label_wrap_gen)
