--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,8 +56,10 @@ export(xs_regional_metrics)
 importFrom(Metrics,mae)
 importFrom(Metrics,rmse)
 importFrom(RegionalCurve,RHG)
+importFrom(arcgisbinding,arc.data2sp)
 importFrom(arcgisbinding,arc.open)
 importFrom(arcgisbinding,arc.raster)
+importFrom(arcgisbinding,arc.select)
 importFrom(assertthat,assert_that)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
@@ -104,8 +106,10 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,grey)
 importFrom(purrr,discard)
 importFrom(purrr,map)
+importFrom(raster,as.raster)
 importFrom(raster,crop)
 importFrom(raster,extent)
 importFrom(raster,hillShade)
@@ -130,6 +134,7 @@ importFrom(stats,integrate)
 importFrom(stats,loess)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
+importFrom(stats,setNames)
 importFrom(testthat,expect_true)
 importFrom(tidyr,gather)
 importFrom(tmap,tm_add_legend)
@@ -144,3 +149,5 @@ importFrom(tmap,tm_symbols)
 importFrom(tmap,tm_text)
 importFrom(tmaptools,bb)
 importFrom(tmaptools,read_osm)
+importFrom(utils,head)
+importFrom(utils,tail)
