Added the xs_metric_plot_2 function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,9 +24,10 @@ export(cross_section_dimensions)
 export(estimate_bankfull)
 export(fc2sf)
 export(feature_extent)
-export(forward_slash)
+export(flowline_metrics)
 export(gof_graph)
 export(level_1_report)
+export(level_2_report)
 export(map_reach_metric)
 export(map_reach_overview)
 export(map_xs)
@@ -48,7 +49,7 @@ export(xs_metric_plot)
 export(xs_metric_ratios)
 export(xs_metrics)
 export(xs_metrics_plot)
-export(xs_metrics_plot2)
+export(xs_metrics_plot_2)
 export(xs_metrics_report)
 export(xs_plot)
 export(xs_profile_plot)
@@ -72,7 +73,7 @@ importFrom(dplyr,last)
 importFrom(dplyr,lead)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
-importFrom(facetscales,facet_grid_sc)
+importFrom(facetscales,facet_grid)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,alpha)
