--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(sp2arc)
 export(stream_power)
 export(xs2pts)
 export(xs_compare_plot)
+export(xs_compare_plot_L2)
 export(xs_dimensions)
 export(xs_geometry)
 export(xs_metric_plot)
