updated the map_reach_overview to use Mapbox instead of the broken tmaptools::read_osm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,8 @@ importFrom(arcgisbinding,arc.open)
 importFrom(arcgisbinding,arc.raster)
 importFrom(arcgisbinding,arc.select)
 importFrom(assertthat,assert_that)
+importFrom(ceramic,cc_elevation)
+importFrom(ceramic,cc_location)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
 importFrom(dplyr,bind_rows)
@@ -107,6 +109,7 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,gray.colors)
 importFrom(grDevices,grey)
 importFrom(purrr,discard)
 importFrom(purrr,map)
@@ -114,6 +117,7 @@ importFrom(raster,as.raster)
 importFrom(raster,crop)
 importFrom(raster,extent)
 importFrom(raster,hillShade)
+importFrom(raster,hillshade)
 importFrom(raster,pointDistance)
 importFrom(raster,raster)
 importFrom(raster,resample)
@@ -126,6 +130,8 @@ importFrom(scales,rescale)
 importFrom(sf,st_crs)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_read)
+importFrom(sf,st_transform)
+importFrom(sp,CRS)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,merge)
 importFrom(sp,proj4string)
@@ -148,7 +154,5 @@ importFrom(tmap,tm_scale_bar)
 importFrom(tmap,tm_shape)
 importFrom(tmap,tm_symbols)
 importFrom(tmap,tm_text)
-importFrom(tmaptools,bb)
-importFrom(tmaptools,read_osm)
 importFrom(utils,head)
 importFrom(utils,tail)
