added the xs_metrics_plot_L2 function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(xs_metric_ratios)
 export(xs_metrics)
 export(xs_metrics_plot)
 export(xs_metrics_plot_2)
+export(xs_metrics_plot_L1)
 export(xs_metrics_report)
 export(xs_plot)
 export(xs_profile_plot)
