minor documentation updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(check_xs_dims)
 export(compare_long_profile)
 export(compare_xs_long_profile)
 export(cross_section_dimensions)
+export(cross_section_dimensions_L1)
 export(estimate_bankfull)
 export(fc2sf)
 export(feature_extent)
