--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ importFrom(rlang,.data)
 importFrom(rlang,parse_expr)
 importFrom(rmarkdown,render)
 importFrom(scales,rescale)
+importFrom(sf,as_Spatial)
 importFrom(sf,st_crs)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_read)
