--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,8 +51,8 @@ export(xs_metric_plot)
 export(xs_metric_ratios)
 export(xs_metrics)
 export(xs_metrics_plot)
-export(xs_metrics_plot_2)
 export(xs_metrics_plot_L1)
+export(xs_metrics_plot_L2)
 export(xs_metrics_report)
 export(xs_plot)
 export(xs_profile_plot)
