adjusted the level 2 report to use the new map_xs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ importFrom(raster,raster)
 importFrom(raster,resample)
 importFrom(raster,terrain)
 importFrom(reshape2,melt)
+importFrom(rgdal,showSRID)
 importFrom(rlang,.data)
 importFrom(rlang,parse_expr)
 importFrom(rmarkdown,render)
