--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(compare_long_profile)
 export(compare_xs_long_profile)
 export(cross_section_dimensions)
 export(cross_section_dimensions_L1)
+export(esri_raster2RasterLayer)
 export(estimate_bankfull)
 export(fc2sf)
 export(feature_extent)
@@ -64,6 +65,7 @@ importFrom(arcgisbinding,arc.data2sp)
 importFrom(arcgisbinding,arc.open)
 importFrom(arcgisbinding,arc.raster)
 importFrom(arcgisbinding,arc.select)
+importFrom(arcgisbinding,as.raster)
 importFrom(assertthat,assert_that)
 importFrom(ceramic,cc_elevation)
 importFrom(ceramic,cc_location)
@@ -117,6 +119,7 @@ importFrom(purrr,discard)
 importFrom(purrr,map)
 importFrom(raster,as.raster)
 importFrom(raster,crop)
+importFrom(raster,crs)
 importFrom(raster,extent)
 importFrom(raster,hillShade)
 importFrom(raster,pointDistance)
