--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,7 +44,7 @@ export(slope_sinuosity)
 export(sp2arc)
 export(stream_power)
 export(xs2pts)
-export(xs_compare_plot)
+export(xs_compare_plot_L1)
 export(xs_compare_plot_L2)
 export(xs_dimensions)
 export(xs_geometry)
