--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,9 +51,9 @@ export(xs_geometry)
 export(xs_metric_plot)
 export(xs_metric_ratios)
 export(xs_metrics)
-export(xs_metrics_plot)
 export(xs_metrics_plot_L1)
 export(xs_metrics_plot_L2)
+export(xs_metrics_plot_L3)
 export(xs_metrics_report)
 export(xs_plot)
 export(xs_profile_plot)
