Added the Level 3 report

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(flowline_metrics)
 export(gof_graph)
 export(level_1_report)
 export(level_2_report)
+export(level_3_report)
 export(map_reach_metric)
 export(map_reach_overview)
 export(map_xs)
@@ -54,7 +55,6 @@ export(xs_metrics)
 export(xs_metrics_plot_L1)
 export(xs_metrics_plot_L2)
 export(xs_metrics_plot_L3)
-export(xs_metrics_report)
 export(xs_plot)
 export(xs_profile_plot)
 export(xs_regional_metrics)
