--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ importFrom(arcgisbinding,arc.data2sp)
 importFrom(arcgisbinding,arc.open)
 importFrom(arcgisbinding,arc.raster)
 importFrom(arcgisbinding,arc.select)
+importFrom(arcgisbinding,arc.write)
 importFrom(arcgisbinding,as.raster)
 importFrom(assertthat,assert_that)
 importFrom(ceramic,cc_elevation)
@@ -148,6 +149,9 @@ importFrom(stats,loess)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,setNames)
+importFrom(stringr,str_detect)
+importFrom(terra,linearUnits)
+importFrom(terra,vect)
 importFrom(testthat,expect_true)
 importFrom(tidyr,gather)
 importFrom(tmap,tm_add_legend)
