--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fluvgeo
 Title: A Package for Fluvial Geomorphic Analysis
-Version: 0.1.35
+Version: 0.1.36
 Authors@R: c(
     person("Michael", "Dougherty", 
            email = "Michael.P.Dougherty@usace.army.mil", 
@@ -55,9 +55,10 @@ Imports:
     sf,
     sp,
     stats,
+    stringr,
+    terra,
     testthat,
     tidyr,
     tmap,
-    tmaptools,
     utils
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.2
