--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray.colors)
 importFrom(grDevices,grey)
+importFrom(methods,"slot<-")
 importFrom(purrr,discard)
 importFrom(purrr,map)
 importFrom(raster,as.raster)
@@ -142,6 +143,7 @@ importFrom(sp,CRS)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,merge)
 importFrom(sp,proj4string)
+importFrom(sp,wkt)
 importFrom(stats,aggregate)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
@@ -150,6 +152,7 @@ importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_replace)
 importFrom(terra,linearUnits)
 importFrom(terra,vect)
 importFrom(testthat,expect_true)
