--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(estimate_bankfull)
 export(fc2sf)
 export(feature_extent)
 export(flowline_metrics)
+export(get_arc_wkt)
 export(gof_graph)
 export(level_1_report)
 export(level_2_report)
