--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,10 +41,12 @@ export(metric_colors)
 export(planform)
 export(planform_dimensions)
 export(reach_rhg_graph)
+export(sf2arc)
 export(shear_stress)
 export(slope_sinuosity)
 export(sp2arc)
 export(stream_power)
+export(sx2arc_table)
 export(xs2pts)
 export(xs_compare_plot_L1)
 export(xs_compare_plot_L2)
