updated documentation to reflect addition of 'maptiles' package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray.colors)
 importFrom(grDevices,grey)
+importFrom(maptiles,get_tiles)
 importFrom(methods,"slot<-")
 importFrom(purrr,discard)
 importFrom(purrr,map)
@@ -138,6 +139,7 @@ importFrom(rlang,parse_expr)
 importFrom(rmarkdown,render)
 importFrom(scales,rescale)
 importFrom(sf,as_Spatial)
+importFrom(sf,st_bbox)
 importFrom(sf,st_crs)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_read)
