Added 'terrainr' to resolve 'ceramic' background imagery issue (See issue #20), removed test_arcpullr workspace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,6 +139,7 @@ importFrom(rlang,parse_expr)
 importFrom(rmarkdown,render)
 importFrom(scales,rescale)
 importFrom(sf,as_Spatial)
+importFrom(sf,st_as_sfc)
 importFrom(sf,st_bbox)
 importFrom(sf,st_crs)
 importFrom(sf,st_drop_geometry)
@@ -159,7 +160,10 @@ importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(terra,linearUnits)
+importFrom(terra,shade)
+importFrom(terra,terrain)
 importFrom(terra,vect)
+importFrom(terrainr,get_tiles)
 importFrom(testthat,expect_true)
 importFrom(tidyr,gather)
 importFrom(tmap,tm_add_legend)
