--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,6 +156,7 @@ importFrom(stats,predict)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
+importFrom(terra,distance)
 importFrom(terra,linearUnits)
 importFrom(terra,shade)
 importFrom(terra,terrain)
