updated documentation of input data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray.colors)
 importFrom(grDevices,grey)
+importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
 importFrom(methods,"slot<-")
 importFrom(purrr,discard)
