updated description and namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,7 @@ importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(terra,distance)
 importFrom(terra,linearUnits)
+importFrom(terra,rast)
 importFrom(terra,shade)
 importFrom(terra,terrain)
 importFrom(terra,vect)
