updated documentation to remove sp dependent functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,7 +63,7 @@ export(xs_regional_metrics)
 importFrom(Metrics,mae)
 importFrom(Metrics,rmse)
 importFrom(RegionalCurve,RHG)
-importFrom(arcgisbinding,arc.data2sp)
+importFrom(arcgisbinding,arc.data2sf)
 importFrom(arcgisbinding,arc.open)
 importFrom(arcgisbinding,arc.raster)
 importFrom(arcgisbinding,arc.select)
@@ -137,7 +137,6 @@ importFrom(rlang,.data)
 importFrom(rlang,parse_expr)
 importFrom(rmarkdown,render)
 importFrom(scales,rescale)
-importFrom(sf,as_Spatial)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_as_text)
