added the new map_extent function using sf to replace feature_extent that used raster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(gof_graph)
 export(level_1_report)
 export(level_2_report)
 export(level_3_report)
+export(map_extent)
 export(map_reach_metric)
 export(map_reach_overview)
 export(map_xs)
