switched map_xs to terra

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ importFrom(arcgisbinding,as.raster)
 importFrom(assertthat,assert_that)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
@@ -118,20 +119,14 @@ importFrom(ggplot2,vars)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray.colors)
-importFrom(grDevices,grey)
+importFrom(grDevices,grey.colors)
 importFrom(magrittr,"%>%")
 importFrom(methods,"slot<-")
 importFrom(purrr,discard)
 importFrom(purrr,map)
-importFrom(raster,as.raster)
-importFrom(raster,crop)
 importFrom(raster,crs)
 importFrom(raster,extent)
-importFrom(raster,hillShade)
 importFrom(raster,pointDistance)
-importFrom(raster,raster)
-importFrom(raster,resample)
-importFrom(raster,terrain)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rlang,parse_expr)
@@ -156,6 +151,7 @@ importFrom(stats,predict)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
+importFrom(terra,crop)
 importFrom(terra,distance)
 importFrom(terra,linearUnits)
 importFrom(terra,rast)
