added tests for esri_raster2SpatRaster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(compare_xs_long_profile)
 export(cross_section_dimensions_L1)
 export(cross_section_dimensions_L2)
 export(esri_raster2RasterLayer)
+export(esri_raster2SpatRaster)
 export(estimate_bankfull)
 export(fc2sf)
 export(feature_extent)
@@ -152,6 +153,7 @@ importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(terra,crop)
+importFrom(terra,crs)
 importFrom(terra,distance)
 importFrom(terra,linearUnits)
 importFrom(terra,rast)
