renamed function to group similar functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,10 +42,10 @@ export(planform)
 export(planform_dimensions)
 export(reach_rhg_graph)
 export(sf2arc)
+export(sf2arc_table)
 export(shear_stress)
 export(slope_sinuosity)
 export(stream_power)
-export(sx2arc_table)
 export(xs2pts)
 export(xs_compare_plot_L1)
 export(xs_compare_plot_L2)
