--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(planform_dimensions)
 export(reach_rhg_graph)
 export(sf2arc)
 export(sf2arc_table)
+export(sf2csv)
 export(shear_stress)
 export(slope_sinuosity)
 export(stream_power)
