--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(cross_section_dimensions_L1)
 export(cross_section_dimensions_L2)
 export(estimate_bankfull)
 export(fc2sf)
+export(fig_xs_profiles)
 export(flowline_metrics)
 export(get_arc_wkt)
 export(gof_graph)
@@ -123,6 +124,7 @@ importFrom(grDevices,gray.colors)
 importFrom(grDevices,grey.colors)
 importFrom(magrittr,"%>%")
 importFrom(methods,"slot<-")
+importFrom(patchwork,plot_layout)
 importFrom(purrr,discard)
 importFrom(purrr,map)
 importFrom(raster,pointDistance)
@@ -171,5 +173,6 @@ importFrom(tmap,tm_scale_bar)
 importFrom(tmap,tm_shape)
 importFrom(tmap,tm_symbols)
 importFrom(tmap,tm_text)
+importFrom(tmap,tmap_grob)
 importFrom(utils,head)
 importFrom(utils,tail)
