added channel and floodplain to map_xs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -164,6 +164,7 @@ importFrom(terrainr,get_tiles)
 importFrom(testthat,expect_true)
 importFrom(tidyr,gather)
 importFrom(tmap,tm_add_legend)
+importFrom(tmap,tm_borders)
 importFrom(tmap,tm_compass)
 importFrom(tmap,tm_layout)
 importFrom(tmap,tm_lines)
