added cross section dimensions table to fig_xs_profiles_L2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(cross_section_dimensions_L2)
 export(estimate_bankfull)
 export(fc2sf)
 export(fig_xs_profiles)
+export(fig_xs_profiles_L2)
 export(flowline_metrics)
 export(get_arc_wkt)
 export(gof_graph)
@@ -76,7 +77,9 @@ importFrom(assertthat,assert_that)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
@@ -122,9 +125,18 @@ importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray.colors)
 importFrom(grDevices,grey.colors)
+importFrom(grid,gpar)
+importFrom(grid,grobHeight)
+importFrom(grid,textGrob)
+importFrom(gridExtra,tableGrob)
+importFrom(gridExtra,ttheme_default)
+importFrom(gtable,gtable_add_grob)
+importFrom(gtable,gtable_add_rows)
 importFrom(magrittr,"%>%")
 importFrom(methods,"slot<-")
 importFrom(patchwork,plot_layout)
+importFrom(patchwork,plot_spacer)
+importFrom(patchwork,wrap_elements)
 importFrom(purrr,discard)
 importFrom(purrr,map)
 importFrom(raster,pointDistance)
