--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ importFrom(assertthat,assert_that)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
@@ -87,6 +88,8 @@ importFrom(dplyr,lag)
 importFrom(dplyr,last)
 importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,recode)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
