--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,7 @@ export(cross_section_dimensions_L1)
 export(cross_section_dimensions_L2)
 export(estimate_bankfull)
 export(fc2sf)
-export(fig_xs_profiles)
+export(fig_xs_profiles_L1)
 export(fig_xs_profiles_L2)
 export(flowline_metrics)
 export(get_arc_wkt)
