--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(gof_graph)
 export(level_1_report)
 export(level_1_report_b)
 export(level_2_report)
+export(level_2_report_b)
 export(level_3_report)
 export(map_extent)
 export(map_reach_metric)
