refactored fig_xs_profiles code into new table_xs_dimension function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(sf2csv)
 export(shear_stress)
 export(slope_sinuosity)
 export(stream_power)
+export(table_xs_dimensions)
 export(xs2pts)
 export(xs_compare_plot_L1)
 export(xs_compare_plot_L2)
