--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(fig_xs_profiles_L2)
 export(flowline_metrics)
 export(get_arc_wkt)
 export(gof_graph)
+export(justify_gtable)
 export(level_1_report)
 export(level_1_report_b)
 export(level_2_report)
@@ -131,10 +132,13 @@ importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray.colors)
 importFrom(grDevices,grey.colors)
 importFrom(grid,gpar)
+importFrom(grid,grid.draw)
 importFrom(grid,grobHeight)
 importFrom(grid,textGrob)
+importFrom(grid,viewport)
 importFrom(gridExtra,tableGrob)
 importFrom(gridExtra,ttheme_default)
+importFrom(gtable,gtable)
 importFrom(gtable,gtable_add_grob)
 importFrom(gtable,gtable_add_rows)
 importFrom(magrittr,"%>%")
