--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ importFrom(patchwork,wrap_elements)
 importFrom(purrr,discard)
 importFrom(purrr,map)
 importFrom(raster,pointDistance)
+importFrom(readr,write_csv)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rlang,parse_expr)
@@ -161,6 +162,7 @@ importFrom(sf,st_bbox)
 importFrom(sf,st_crs)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_geometry)
+importFrom(sf,st_geometry_type)
 importFrom(sf,st_read)
 importFrom(sf,st_sf)
 importFrom(sf,st_transform)
