documented new gdb_raster2SpatRast function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(fc2sf)
 export(fig_xs_profiles_L1)
 export(fig_xs_profiles_L2)
 export(flowline_metrics)
+export(gdb_raster2SpatRast)
 export(get_arc_wkt)
 export(gof_graph)
 export(justify_gtable)
